--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "server": "nodemon app.js",
-    "server:debug": "nodemon --inspect app.js"
+    "server:debug": "nodemon --inspect app.js",
+    "frontend-install": "npm install --prefix frontend",
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "author": "khan-c",
   "license": "ISC",
@@ -22,6 +25,7 @@
     "validator": "^12.0.0"
   },
   "devDependencies": {
+    "concurrently": "^5.0.0",
     "eslint": "^6.6.0",
     "nodemon": "^1.19.4"
   }
