--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "concurrently": "^5.0.0",
     "eslint": "^6.6.0",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
